--- a/TwoColor/Base.lproj/LaunchScreen.storyboard
+++ b/TwoColor/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_72" orientation="portrait" appearance="light"/>
+    <device id="retina6_7" orientation="landscape" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,66 +13,51 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
+                        <rect key="frame" x="0.0" y="0.0" width="926" height="428"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cqm-hs-Wrh">
-                                <rect key="frame" x="16" y="441.66666666666669" width="398" height="73.666666666666686"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="8eF-qx-76V">
+                                <rect key="frame" x="78.333333333333314" y="147" width="769.33333333333348" height="147.33333333333337"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TWO" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="qha-9f-9x9">
-                                        <rect key="frame" x="0.0" y="0.0" width="126.66666666666667" height="73.666666666666671"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TWO" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="qha-9f-9x9" userLabel="twoLabel">
+                                        <rect key="frame" x="316" y="0.0" width="137.33333333333337" height="73.666666666666671"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="60"/>
                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <color key="shadowColor" systemColor="systemRedColor"/>
+                                        <color key="shadowColor" systemColor="systemPinkColor"/>
                                         <size key="shadowOffset" width="-2" height="2"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="COLORES" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="hiu-uz-Npo">
-                                        <rect key="frame" x="126.66666666666666" y="0.0" width="271.33333333333337" height="73.666666666666671"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="COLORES" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="hiu-uz-Npo" userLabel="coloresLabel">
+                                        <rect key="frame" x="248.99999999999997" y="73.666666666666657" width="271.33333333333326" height="73.666666666666657"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="60"/>
-                                        <color key="textColor" systemColor="systemRedColor"/>
-                                        <color key="highlightedColor" systemColor="systemRedColor"/>
+                                        <color key="textColor" systemColor="systemPinkColor"/>
+                                        <color key="highlightedColor" systemColor="systemPinkColor"/>
                                         <color key="shadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <size key="shadowOffset" width="-2" height="2"/>
                                     </label>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstItem="hiu-uz-Npo" firstAttribute="leading" secondItem="qha-9f-9x9" secondAttribute="trailing" id="Vdy-de-Jig"/>
-                                    <constraint firstItem="qha-9f-9x9" firstAttribute="leading" secondItem="Cqm-hs-Wrh" secondAttribute="leading" constant="16" id="Wls-H4-CbA"/>
-                                    <constraint firstAttribute="trailing" secondItem="hiu-uz-Npo" secondAttribute="trailing" constant="16" id="ini-OF-F5B"/>
-                                    <constraint firstItem="qha-9f-9x9" firstAttribute="width" secondItem="hiu-uz-Npo" secondAttribute="width" multiplier="0.46683" id="lIv-Mb-2Nc"/>
-                                    <constraint firstItem="qha-9f-9x9" firstAttribute="height" secondItem="hiu-uz-Npo" secondAttribute="height" id="tsg-ad-Wa9"/>
-                                    <constraint firstItem="qha-9f-9x9" firstAttribute="width" secondItem="hiu-uz-Npo" secondAttribute="height" multiplier="126:73" id="xNk-t7-dHQ"/>
-                                </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemIndigoColor"/>
                         <constraints>
-                            <constraint firstItem="Cqm-hs-Wrh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="7dp-iL-AaC"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Cqm-hs-Wrh" secondAttribute="trailing" constant="16" id="ECT-27-6EB"/>
-                            <constraint firstItem="Cqm-hs-Wrh" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="SYa-cZ-Onk"/>
-                            <constraint firstItem="Cqm-hs-Wrh" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="TRS-zP-swO"/>
-                            <constraint firstItem="Cqm-hs-Wrh" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="TlU-wl-LkX"/>
-                            <constraint firstItem="Cqm-hs-Wrh" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="ZPv-dr-OLf"/>
-                            <constraint firstItem="Cqm-hs-Wrh" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="ggT-9Y-a0M"/>
-                            <constraint firstItem="Cqm-hs-Wrh" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="lva-F3-12j"/>
-                            <constraint firstItem="Cqm-hs-Wrh" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="rAa-AJ-53N"/>
-                            <constraint firstItem="Cqm-hs-Wrh" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="tvN-8L-uba"/>
-                            <constraint firstItem="Cqm-hs-Wrh" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" constant="1" id="uPa-Cv-iOi"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8eF-qx-76V" secondAttribute="trailing" constant="78.333333333333371" id="9Fm-gM-sfH"/>
+                            <constraint firstItem="8eF-qx-76V" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="M39-vZ-zb8"/>
+                            <constraint firstItem="8eF-qx-76V" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="cSR-hD-fxZ"/>
+                            <constraint firstItem="8eF-qx-76V" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="78.333333333333343" id="nvm-ci-iWh"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52.173913043478265" y="375"/>
+            <point key="canvasLocation" x="50.769230769230766" y="374.64454976303318"/>
         </scene>
     </scenes>
     <resources>
         <systemColor name="systemIndigoColor">
             <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
